# tsukumo-core

./: .clang-format  .cmake-format.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DetermineTypes.cmake  LICENSE  README.md  launch_task.s  linker.ld  main.c  putstring.h  start.s  task1.c  task2.c  task3.c  task4.c  tasks.c  toolchain.cmake  typedef.h.in  usermain.c  userstack.h
docs/developer/notes/: Calling Convention.md  run_qemu.md
docs/kernel/: API_Support_Status.md  interrupts.md
include/sys/: config.h  interrupt.h  ioport.h  profile.h
include/tk/: errno.h  tkernel.h
kernel/: dispatch.h  event_flag.c  event_flag.h  ini_tsk.c  ini_tsk.h  list.h  mailbox.c  mailbox.h  memcpy.c  memset.c  memset.h  semaphore.c  semaphore.h  start.c  task.c  task.h  timer.c  timer.h  usermain.c
kernel/asm/rv32/: address.h  context_switch.s  idl_tsk.S  launch_task.S  launch_task.s  start.S  start.s
test/: putstring.h  task3.c  task4.c  tasks.h  unity_config.h  usermain.c  userstack.c
